@@ -4,6 +4,10 @@ Changelog
 3.1a3 - unreleased
 ------------------
 
+- Remove unused variables from ``config.py``: ``DEBUG``, ``GLOBALS``,
+  ``PKG_NAME``, ``SKIN_LAYERS``, ``SKIN_NAME``, ``INSTALL_DEMO_TYPES``.
+  [hannosch]
+
 - Added a general collection criteria translation sync functionality including
   language independent criteria support. This is currently not activated
   automatically and has no UI support yet. See the ``README.txt`` in the
